Add partials and destroy method

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,4 +41,5 @@ Hola hola hola hola hola hola hola hola hola hola
 </body>
 </html>
 
+<%= link_to 'Alpha blog', articles_path %> |
 <%= link_to 'About', about_path %>
