--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,45 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Recordando HTML</title>
-</head>
-<body>
+<div class = "center jumbotron">
+ <h1> ALPHA BLOG</h1>
+ <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge" %> 
+</div>
 
-<h1>Welcome to my page!!</h1>
-<table style="width:400%">
-<tr>
-<HR ALIGN = "center" size = "5" color = "red">
-<DIV ALIGN = left>
-<pre>
-Hola hola hola hola hola hola hola hola hola hola 
-
-Hola hola hola hola hola hola hola hola hola hola 
-
-Hola hola hola hola hola hola hola hola hola hola 
-
-Hola hola hola hola hola hola hola hola hola hola 
-
-</pre> 
-</DIV>
-</tr>
-
-<tr>
-<DIV ALIGN = right>
-<pre>
- Hello hello hello hello hello hello hello hello
-
- Hello hello hello hello hello hello hello hello
-
- Hello hello hello hello hello hello hello hello
-
- Hello hello hello hello hello hello hello hello
-
-</pre>
- </DIV>
-</tr>
-</table>
-</body>
-</html>
-
-<%= link_to 'Alpha blog', articles_path %> |
-<%= link_to 'About', about_path %>
