Add styling to show

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,15 @@ $navbar-default-bg: #B404AE;
   background-color: #B404AE;
 }
 
+.article-actions{
+  border-top: 1px solid #eaeaea;
+  padding-top: 7px;
+}
+
+.description{
+  margin-top: 0;
+}
+
 footer{
   margin-top: 45px;
   padding-top: 15px;
