--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,11 @@ $navbar-default-bg: #B404AE;
   background-color: #B404AE;
 }
 
+.article-meta-details{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .article-actions{
   border-top: 1px solid #eaeaea;
   padding-top: 7px;
