--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,7 +19,12 @@
   <%end %>
     
   <h4 class="center description"> <strong> Description:</strong> </h4>
-  <hr> <%= simple_format(@article.description) %> </hr>
+  <hr>
+  <%= simple_format(@article.description) %> 
+  <% if @article.categories.any? %>
+    <p> Categories: <%= render @article.categories %></p>
+  <% end %>
+  </hr>
 
   
   <div class="article-actions">
