--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li> <%= link_to "Articles" , articles_path %> </li>
-        <li><%= link_to "Users", users_path %></li>
+        <li> <%= link_to "Articles" , articles_path ,id:"text" %> </li>
+        <li><%= link_to "Users", users_path, id: "text" %></li>
          <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
